refactor: fix N+1 queries across workshop, registration, and room services (#23)